--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,13 @@
 h1 {
 	text-align: center;
-	font-family: garamond;
-	font-size: 48px;
+	font-family: Georgia;
+	font-size: 56px;
+	font-color: white;
+}
+body {
+	text-align: left;
+	font-family: Georgia;
+	font-size: 24px;
+	background-color: navy;
+	font-color: white;
 }
