--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 body {
 	font-family: Georgia;
-	font-size: 24px;
+	font-size: 16px;
 	background-color: white;
 
 }
@@ -8,4 +8,5 @@ h1 {
 	text-align: center;
 	font-family: Georgia;
 	font-size: 56px;
+	background-color: white;
 }
