--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,3 +10,9 @@ h1 {
 	font-size: 56px;
 	background-color: white;
 }
+h2 {
+	text-align: center;
+	font-family: Georgia;
+	font-size: 20px;
+	background-color: white;
+}
