--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,3 +16,20 @@ h2 {
 	font-size: 20px;
 	background-color: white;
 }
+h3 {
+	text-align: left;
+	font-family: Georgia;
+	font-size: 16px;
+	font-weight: bold;
+}
+h4 {
+	text-align: left;
+	font-family: Georgia;
+	font-size: 16px;
+	font-style: italic;
+}
+p {
+	text-align: left;
+	font-family: Georgia;
+	font-size: 16px;
+}
