--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@ body {
 	font-family: Georgia;
 	font-size: 16px;
 	background-color: white;
-
+	line-height: normal;
 }
 h1 {
 	text-align: center;
@@ -13,19 +13,20 @@ h1 {
 h2 {
 	text-align: center;
 	font-family: Georgia;
-	font-size: 20px;
+	font-size: 24px;
 	background-color: white;
 }
 h3 {
 	text-align: left;
 	font-family: Georgia;
-	font-size: 16px;
+	font-size: 20px;
 	font-weight: bold;
 }
 h4 {
 	text-align: left;
 	font-family: Georgia;
 	font-size: 16px;
+	font-weight: normal;
 	font-style: italic;
 }
 p {
