--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,6 +15,8 @@ h2 {
 	font-family: Georgia;
 	font-size: 24px;
 	background-color: white;
+	margin-top: 0px;
+	margin-bottom: 0px;
 }
 h3 {
 	text-align: left;
