--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ h1 {
 h2 {
 	text-align: center;
 	font-family: Georgia;
-	font-size: 24px;
+	font-size: 20px;
 	background-color: white;
 	margin-top: 0px;
 	margin-bottom: 0px;
@@ -23,6 +23,8 @@ h3 {
 	font-family: Georgia;
 	font-size: 20px;
 	font-weight: bold;
+	margin-top: 0px;
+	margin-bottom: 0px;
 }
 h4 {
 	text-align: left;
