--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,17 +3,20 @@ body {
 	font-size: 16px;
 	background-color: white;
 	line-height: normal;
+	margin-top: 0px;
+	margin-bottom: 0px;
 }
 h1 {
 	text-align: center;
 	font-family: Georgia;
-	font-size: 48px;
+	font-size: 36px;
 	background-color: white;
 }
 h2 {
 	text-align: center;
 	font-family: Georgia;
 	font-size: 20px;
+	font-weight: normal;
 	background-color: white;
 	margin-top: 0px;
 	margin-bottom: 0px;
