--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,43 +1,34 @@
 body {
 	font-family: Georgia;
 	font-size: 16px;
+	font-weight: normal;
+	font-style: normal;
 	background-color: white;
 	line-height: normal;
 	margin-top: 0px;
 	margin-bottom: 0px;
+	margin-left: 50px;
+	margin-right: 50px;
 }
 h1 {
 	text-align: center;
-	font-family: Georgia;
 	font-size: 36px;
-	background-color: white;
 }
 h2 {
 	text-align: center;
-	font-family: Georgia;
 	font-size: 20px;
-	font-weight: normal;
-	background-color: white;
-	margin-top: 0px;
-	margin-bottom: 0px;
 }
 h3 {
 	text-align: left;
-	font-family: Georgia;
 	font-size: 20px;
 	font-weight: bold;
-	margin-top: 0px;
-	margin-bottom: 0px;
 }
 h4 {
 	text-align: left;
-	font-family: Georgia;
 	font-size: 16px;
-	font-weight: normal;
 	font-style: italic;
 }
 p {
 	text-align: left;
-	font-family: Georgia;
 	font-size: 16px;
 }
