--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,34 +1,33 @@
 body {
 	font-family: Georgia;
-	font-size: 16px;
+	font-size: 20px;
 	font-weight: normal;
 	font-style: normal;
-	background-color: white;
+	background-color: #009999;
+	color: black;
 	line-height: normal;
 	margin-top: 0px;
 	margin-bottom: 0px;
-	margin-left: 50px;
-	margin-right: 50px;
+	margin-left: 350px;
+	margin-right: 350px;
+	text-align: center;
 }
 h1 {
-	text-align: center;
-	font-size: 36px;
+	font-size: 48px;
 }
 h2 {
-	text-align: center;
-	font-size: 20px;
+	font-weight: normal;
+	font-size: 30px;
 }
 h3 {
-	text-align: left;
-	font-size: 20px;
+	border-style: double;
+	background-color: #004d4d;
+	color: white;
+	font-size: 24px;
 	font-weight: bold;
 }
 h4 {
-	text-align: left;
-	font-size: 16px;
+	font-size: 20px;
+	font-weight: normal;
 	font-style: italic;
-}
-p {
-	text-align: left;
-	font-size: 16px;
 }
