--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 body {
-	font-family: Georgia;
+	font-family: Bookman;
 	font-size: 20px;
 	font-weight: normal;
 	font-style: normal;
@@ -8,8 +8,8 @@ body {
 	line-height: normal;
 	margin-top: 0px;
 	margin-bottom: 0px;
-	margin-left: 150px;
-	margin-right: 150px;
+	margin-left: 50px;
+	margin-right: 50px;
 	text-align: center;
 }
 h1 {
@@ -29,11 +29,21 @@ h3 {
 h4 {
 	font-size: 20px;
 	font-weight: bold;
-	font-style: italic;
 }
 
 h5 {
 	font-size: 20px;
 	font-weight: normal;
 	font-style: italic;
+}
+a:link {
+	color: white;
+}
+
+a:visited {
+	color: #00cccc;
+}
+
+a:hover {
+	color: black;
 }
