--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,8 +6,8 @@ body {
 	background-color: #009999;
 	color: black;
 	line-height: normal;
-	margin-left: 150px;
-	margin-right: 150px;
+	margin-left: 5%;
+	margin-right: 5%;
 	text-align: center;
 }
 h1 {
